# klortho

./: .gitignore  LICENSE.md  README.md  bun.lockb  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.notes/: sample-structure.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ssh_config/: mod.rs  ssh_host_record.rs
src-tauri/src/ssh_config_parser/: Cargo.toml  host_record.rs  mod.rs  ssh_client_file.rs  ssh_config.rs  ssh_host_config.rs  utils.rs
src-tauri/src/sshd_config_parser/: Cargo.toml  mod.rs  server_record.rs
src-tauri/src/theme_fetcher/: Cargo.toml  mod.rs
src/__tests__/: setup.ts
src/components/: app-features.tsx  app-sidebar.tsx  index.ts
src/components/ui/: avatar.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  form.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  switch.tsx  tabs.tsx  toast.tsx  toaster.tsx  tooltip.tsx
src/features/: index.ts
src/features/ClientConfiguration/: ClientConfSettingsPage.tsx  ClientConfigurationPage.tsx  LoadClientConfPage.tsx  NewClientConfPage.tsx
src/features/KeyManagement/: GenerateKeysPage.tsx  ImportKeysPage.tsx  KeyManagementPage.tsx  KeyManagementSettingsPage.tsx
src/features/ServerConfiguration/: LoadServerConfPage.tsx  NewServerConfPage.tsx  ServerConfSettingsPage.tsx  (+1 more)
src/hooks/: use-toast.ts
src/types/: ClientConfiguration.d.ts  HostRecord.d.ts  SSHHostRecord.d.ts  index.ts
(+9 files in other folders)
