[package]
name = "ssh_config_parser"
version = "0.1.0"
edition = "2021"
authors = ["Mark Litchfield <mark.a.litchfield@proton.me>"]

[lib]
name = "ssh_config_parser"
path = "mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1.0"
chrono = "0.4"
